Revert "Update file README.org"
This reverts commit 462cf2f08e7426661b419a2f52bb48287f847d94

--- a/bench/barite/README.org
+++ b/bench/barite/README.org
@@ -24,13 +24,15 @@ celestite; following diffusion of $BaCl_2$ celestite dissolution
 occurs Dissolution of celestite and the successive release of
 $SO_4^{2-}$ into solution causes barite to precipitate:
 
-```\mathrm{Ba}^{2+}_{\mathrm{(aq)}} + \mathrm{SrSO}_{4, \mathrm{(s)}} \rightarrow \mathrm{BaSO}_{4,\mathrm{(s)}} + \mathrm{Sr}^{2+}_{\mathrm{(s)}}```
+#+begin_src tex
+$ \mathrm{Ba}^{2+}_{\mathrm{(aq)}} + \mathrm{SrSO}_{4, \mathrm{(s)}} \rightarrow \mathrm{BaSO}_{4,\mathrm{(s)}} + \mathrm{Sr}^{2+}_{\mathrm{(s)}} $
+#+end_src
 
 Reaction rates are calculated using a general kinetics rate law for
 both dissolution and precipitation based on transition state
 theory:
 
-```\frac{\mathrm{d}m_{m}}{\mathrm{d}t} = -\mathrm{SA}_m k_{\mathrm{r},m} (1-\mathrm{SR}_{m})```
+$ \frac{\mathrm{d}m_{m}}{\mathrm{d}t} = -\mathrm{SA}_m k_{\mathrm{r},m} (1-\mathrm{SR}_{m})$
 
 
 where $\mathrm{d}m\,(\mathrm{mol/s})$ is the rate of a mineral phase
